--- a/style.css
+++ b/style.css
@@ -1,90 +1,34 @@
-body{
-    text-align: center;
-    background: linear-gradient( #4287f5 0%,#4bf542 100%);
+#contact iframe
+{
+    width: 100%;
 }
-
-img{
-  width:100;
-  height:100;
-    border-radius: 50%;
-    
+.travel_mainDiv
+{
+    border: 1px solid lightgrey;
 }
-#myname{
-   font-family: 'Courgette', cursive;
-}
-#Favorite_food{
-     padding:40px;
-    text-align:center:
-}
-h1{
-  
-  font-size:18px;
-}
-p{
-  font-size:18px;
-  color:#6A1B9A;
-    
-}
-h2{
-  font-size:20px;
-  color:#003487;
-}
-.line{
-    height: 6px;
-    background-color: black;
-    width:70px;
-    margin:8px auto;
-}
-
-.menu{
-   list-style: none;
-    font-family:cursive;
-   float:right;
-    top:10px;
-    right:30px;
-    cursor: pointer;
-    color:black;
-}
-.menu a{
-    color:black !important;
-}
-
-
-.link{
-    color:crimson;
-    display: inline;
-    padding-top:5px;
-    padding-left:9px;
-    padding-right:9px;
-    padding-bottom: 5px;
-}
-   .link:hover{
-    background-color:beige;
-}
-
-
-
-#picture{
-    width:auto;
-    height:300px;
-   border-radius:0%;
-    
+.travel_mainDiv h5 , .travel_mainDiv p
+{
     margin:20px;
 }
-.food
+.travel_mainDiv img
 {
-  background: #373B44;  /* fallback for old browsers */
-
- background: linear-gradient( #4286f4, #373B44); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-padding-top:20px;
+    width: 100%;
 }
 
-img {
-transition: transform .2s;
-border: 10px solid #AAAAAA;
+.movie_head
+{
+    font-size: 20px;
+    padding: 6px 22px;
+    border-radius: 10px;
+    margin-bottom: 15px;
 }
 
-img:hover {
-    /* Give transform property to scale to 0.9 */
-    transform: scale( );
+.movie_head i
+{
+    float: right;
+}
+
+.movie_text span
+{
+    color: orange;
 }
